Implementar sqlite-native-runtime: capa Rust + binding Java Panama FFI
Rust (libsqlite3-sys bundled, SQLite 3.46):
- cdylib + staticlib con 47 símbolos snr_* exportados
- Cobertura completa: conexión, exec, prepared statements, bind/step/column,
  transacciones (BEGIN/COMMIT/ROLLBACK), savepoints, WAL checkpoint/autocheckpoint
- Thread safety via Arc<Mutex<RawConn>> en Handle y StmtHandle
- Gestión de memoria clara: punteros internos vs transferidos documentados

Java (Panama FFI, Java 21, sin JNI):
- SqliteLibrary: bindings de bajo nivel (MethodHandle por símbolo)
- SqliteConnection: conexión AutoCloseable con transaction(), withSavepoint(), enableWal()
- SqliteStatement: prepared statement AutoCloseable con fluent API de bind
- SqliteException: excepción runtime con mensajes desde snr_last_error()
- Localización de .so vía snr.lib / SNR_LIB / rutas por defecto

Smoke test verifica: open_memory, WAL, INSERT, SELECT streaming, transaction
rollback, savepoint rollback, named parameters, blob.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>